# LOMAS

install/: local_setup.sh  setup.sh
install/lomas_ros_pkg/lib/lomas_ros_pkg/: machine_node_2  watering_node_2
install/lomas_ros_pkg/share/lomas_ros_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/lomas_ros_pkg/share/lomas_ros_pkg/launch/: complete.launch.xml
install/msgfolder/include/msgfolder/msgfolder/msg/: machine_command.h  machine_status.hpp  rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  watering_command.hpp  watering_status.h  watering_status.hpp
install/msgfolder/include/msgfolder/msgfolder/msg/detail/: machine_command__functions.c  machine_command__rosidl_typesupport_fastrtps_cpp.hpp  machine_command__struct.h  machine_command__struct.hpp  machine_command__type_support.c  machine_command__type_support.h  machine_status__builder.hpp  machine_status__rosidl_typesupport_fastrtps_cpp.hpp  machine_status__rosidl_typesupport_introspection_c.h  (+17 more)
install/msgfolder/share/ament_index/resource_index/package_run_dependencies/: msgfolder
install/msgfolder/share/ament_index/resource_index/parent_prefix_path/: msgfolder
install/msgfolder/share/ament_index/resource_index/rosidl_interfaces/: msgfolder
install/msgfolder/share/msgfolder/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/msgfolder/share/msgfolder/cmake/: ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_msgfolder__rosidl_generator_cExport-noconfig.cmake  export_msgfolder__rosidl_generator_pyExport-noconfig.cmake  export_msgfolder__rosidl_generator_pyExport.cmake  export_msgfolder__rosidl_typesupport_fastrtps_cExport.cmake  msgfolderConfig.cmake  msgfolder__rosidl_typesupport_cExport-noconfig.cmake  msgfolder__rosidl_typesupport_cExport.cmake  msgfolder__rosidl_typesupport_cppExport-noconfig.cmake  msgfolder__rosidl_typesupport_introspection_cExport-noconfig.cmake  msgfolder__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake
install/msgfolder/share/msgfolder/msg/: MachineCommand.idl  WateringStatus.idl
src/lomas_ros_pkg/: package.xml  setup.cfg  setup.py
src/lomas_ros_pkg/lomas_ros_pkg/: machine_node_2.py
src/msgfolder/: CMakeLists.txt  my_bridge_mapping.yaml  package.xml
src/msgfolder/msg/: WateringStatus.msg
(+8 files in other folders)
