<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>msgfolder</name>
    <version>0.0.1</version>
    <description>The msgfolder package</description>
    <maintainer email="johan10_kurt@hotmail.com">Johan Kurt</maintainer>
    <license>Apache-2.0</license>
    <member_of_group>rosidl_interface_packages</member_of_group>
    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>std_msgs</depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>
    <buildtool_depend>builtin_interfaces</buildtool_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <exec_depend>builtin_interfaces</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
        <ros1_bridge mapping_rules="my_bridge_mapping.yaml"/>
    </export>
</package>


